conclusion + some edits on section 2 and 4

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -1,3 +1,8 @@
+% !TEX encoding = UTF-8 Unicode
+
+
+
+
 @misc{bitmex,
 	Author = {Bitmex},
 	Howpublished = {\url{https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1/}},
@@ -8,7 +13,7 @@
 @misc{techrev,
 	Author = {Mike Orcutt},
 	Howpublished = {\url{https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics/}},
-	Title = {“Stablecoins” are trending, but they may ignore basic economics},
+	Title = {"Stablecoins" are trending, but they may ignore basic economics},
 	Note = {Accessed: 2018-07-06},
 	Year = {2018}}
 
@@ -116,7 +121,7 @@
 @misc{linkedin,
 	Author = {Sunny Dhillon},
 	Howpublished = {\url{ https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}},
-	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies’ Price Volatility Problems},
+	Title = {Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies Price Volatility Problems},
 	Note = {Accessed: 2018-10-29},
 	Year = {2018}}	
 
@@ -146,3 +151,8 @@
 	Title = {Stablecoins Explained},
 	Note = {Accessed: 2018-10-29},
 	Year = {2018}}
+	
+@misc{nakamoto2008bitcoin,
+	Author = {Nakamoto, Satoshi},
+	Title = {Bitcoin: A peer-to-peer electronic cash system},
+	Year = {2008}}
