Final changes for the report

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -156,3 +156,9 @@
 	Author = {Nakamoto, Satoshi},
 	Title = {Bitcoin: A peer-to-peer electronic cash system},
 	Year = {2008}}
+
+@misc{swan,
+	Author = {},
+	Title = {Black Swan},
+	Howpublished = {\url{ https://www.investopedia.com/terms/b/blackswan.asp	}},
+    Year = {2008}}
