title and names

--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -17,9 +17,8 @@
 \frontmatter
 \mainmatter
 
-\title{Stable Coin}
-%\author{}
-
+\title{Analysis on the Current State of Stablecoins}
+\author{Didem Demirag (40052597) \\, Seyedehmahsa Moosavi (27403577)}
 %\author{}
 \institute{Concordia University}
 
