one small change

--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -18,7 +18,7 @@
 \mainmatter
 
 \title{Analysis on the Current State of Stablecoins}
-\author{Didem Demirag (40052597) \\, Seyedehmahsa Moosavi (27403577)}
+\author{Didem Demirag (40052597) \\ Seyedehmahsa Moosavi (27403577)}
 %\author{}
 \institute{Concordia University}
 
